--- a/Melodira/app/src/main/res/layout/activity_main.xml
+++ b/Melodira/app/src/main/res/layout/activity_main.xml
@@ -65,25 +65,39 @@
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+
             android:text="Canción"
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="@color/pure_black"
             android:gravity="center"
-            android:ellipsize="end"
             android:maxLines="1"/>
 
         <TextView
             android:id="@+id/tvArtist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+
             android:text="Artista"
             android:textSize="18sp"
             android:textColor="@color/pure_black"
             android:alpha="0.7"
             android:gravity="center"
             android:layout_marginTop="4dp"
-            android:ellipsize="end"
             android:maxLines="1"/>
 
         <TextView
